# obmc-yadro-libdbussession

./: README.MD  meson.build  obmcsess-sshsrv.service.in
include/libobmcsession/: manager.hpp  obmcsession.h  obmcsession.hpp  obmcsession_proto.h  obmcsession_proto.hpp  session.hpp
services/: sshsvc.cpp
src/: api.cpp  dbus.hpp  manager.cpp  manager.hpp  session.cpp  session.hpp
